@@ -1,3 +1,8 @@
+2007-12-29  Alexey Shchepin  <alexey@process-one.net>
+
+	* src/ejabberd_s2s_out.erl: Fixed behavior when outgoing_s2s_port
+	option is not defined (EJAB-487)
+
 2007-12-27  Badlop  <badlop@process-one.net>
 
 	* src/mod_vcard_ldap.erl: Fix some field names (EJAB-483)
